Update writer/src/main/java/it/bz/idm/bdp/dal/util/JPAException.java